--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bebidas feiras com café</title>
-    <link rel="stylesheet" href="code.CSS">
+    <link rel="stylesheet" href="code.css">
 
     <!--Essa página foi criada utilizando como base o conteúdo do artigo do site: https://www.mokaclube.com.br/blog/quais-os-tipos-de-cafe/ 
 Autor: MokaClube. 27 de setembro de 2019 
