--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Minha Página de Contato</title>
-    <link rel="stylesheet" href="code.CSS">
+    <link rel="stylesheet" href="code.css">
 </head>
 
 <body>
