--- a/contato.html
+++ b/contato.html
@@ -12,8 +12,8 @@
 
     <div class="foto">  <img  src=".jpg" width="150" height="150"></div>
     <div>
-        <p>Olá! Meu nome é Gabriel José . Sou estudante do iftm com interesse em informatica.
-            Estou sempre aberto(a) para novas conexões e oportunidades.</p>
+        <p>Olá! Meu nome é Gabriel José. Sou estudante do Instituto Federal do Triângulo Mineiro com interesse em informatica. 
+            </p>
     </div>
 
 
@@ -21,7 +21,6 @@
     <div class="redes">
         <h2>Links</h2>
         <ul>
-            <li><a href="https://www.linkedin.com/in/seuusuario" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/Gabriel-Jrs" target="_blank">GitHub</a></li>
             <li><a href="https://www.instagram.com/seuusuario" target="_blank">Instagram</a></li>
         </ul>
