--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
 
     <div class="foto">  <img  src="cachorro-estudando-enquanto-toma-cafe-em-uma-biblioteca-vestindo-um-terno-e-oculos-escuros-ia-generativa_793136-13.avif" width="150" height="150"></div>
     <div>
-        <p>Olá! Meu nome é Gabriel José. Sou estudante do Instituto Federal do Triângulo Mineiro com interesse em informatica. 
+        <p>Olá! Meu nome é Gabriel José. Sou estudante do Instituto Federal do Triângulo Mineiro no curso de informatica :). 
             </p>
     </div>
 
