--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Contato</h1>
 
-    <div class="foto">  <img  src="cachorro-estudando-enquanto-toma-cafe-em-uma-biblioteca-vestindo-um-terno-e-oculos-escuros-ia-generativa_793136-13.avif" width="150" height="150"></div>
+    <div class="foto">  <img  src="cachocoai.avif" width="150" height="150"></div>
     <div>
         <p>Olá! Meu nome é Gabriel José. Sou estudante do Instituto Federal do Triângulo Mineiro no curso de informatica :). 
             </p>
