--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
     <h1>Contato</h1>
     
     <div>
-        <p>Olá! Meu nome é Gabriel José. Sou estudante do Instituto Federal do Triângulo Mineiro no curso de informatica :). 
+        <p>Olá! Meu nome é Gabriel José. Sou estudante do Instituto Federal do Triângulo Mineiro no curso de informatica :), moro no município de Patrocinio no estado de MG, aprecio um bom cafezinho com pão de queijo que acabou de sair do forno. 
             </p>
     </div>
 
