--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
     <h1>Contato</h1>
     
     <div>
-        <p>Olá! Meu nome é Gabriel José. Sou estudante do Instituto Federal do Triângulo Mineiro no curso de informatica :), moro no município de Patrocinio no estado de MG, aprecio um bom cafezinho com pão de queijo que acabou de sair do forno. 
+        <p>Olá! Meu nome é Gabriel José. Sou estudante do Instituto Federal do Triângulo Mineiro no curso de informatica(2º ano), moro no município de Patrocinio no estado de MG, aprecio um bom cafezinho com pão de queijo que acabou de sair do forno como um mineiro raiz!. 
             </p>
     </div>
 
@@ -22,6 +22,7 @@
         <ul>
             <li><a href="https://github.com/Gabriel-Jrs" target="_blank">GitHub</a></li>
             <li><a href="https://www.instagram.com/seuusuario" target="_blank">Instagram</a></li>
+            <li><a href="index.html" target="_blank">Voltar</a></li>
         </ul>
     </div>
 
